--- a/Desafio-7-Estrategia-de-Autenticacion/src/views/login.handlebars
+++ b/Desafio-7-Estrategia-de-Autenticacion/src/views/login.handlebars
@@ -10,7 +10,7 @@
             <input type="text" name="password" id="password" class="input" placeholder="************">
 
             <button type="submit" id="btn" class="btn">Iniciar Sesión</button>
-            <button type="submit" id="btnGit" class="btn git">Iniciar Sesión con Github</button>
+            <a href="http://localhost:8080/auth/github" id="btnGit" class="btn git">Iniciar Sesión con Github</a>
         </form>
     </div>
 </div>
