Desafio-7-Estrategia-de-Autenticacion

--- a/Desafio-7-Estrategia-de-Autenticacion/src/views/login.handlebars
+++ b/Desafio-7-Estrategia-de-Autenticacion/src/views/login.handlebars
@@ -2,7 +2,7 @@
     <div class="formContainer">
         <h2>Inicia Sesion</h2>
 
-        <form action="auth/login" method="post" class="form">
+        <form action="login" method="post" class="form">
             <p class="text">Email</p>
             <input type="text" name="username" id="email" class="input" placeholder="user@gmail.com">
 
